--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Dotnet Publish
       run: |
         dotnet publish 'RiderWorkFlow.csproj' -c Release -o "RiderWorkFlow"
-        7z a -tzip "RiderWorkFlow.zip" "RiderWorkFlow/*"
+        7z a -tzip "RiderWorkFlow.zip" "/*"
         rm -r "RiderWorkFlow"
     - name: Create Release
       uses: softprops/action-gh-release@v1
