--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,41 +2,35 @@ name: Publish
 
 on:
   push:
-    branches: [ "main" ]
+    paths-ignore:
+      - README.md
+      - .gitignore
+    branches:
+      - main
 
 permissions:
   contents: write
-  
+
 jobs:
   build:
-
     runs-on: windows-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: get version
-      id: version
-      uses: notiz-dev/github-action-json-property@release
-      with: 
-        path: 'plugin.json'
-        prop_path: 'Version'    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7.0.x
-    - name: Restore dependencies
-      run: dotnet restore 'RiderWorkFlow.csproj'
-    - name: Build
-      run: dotnet build 'RiderWorkFlow.csproj' --no-restore
-    - name: Dotnet Publish
-      run: |
-        dotnet publish 'RiderWorkFlow.csproj' -c Release -o "RiderWorkFlow"
-        7z a -tzip "RiderWorkFlow.zip" "RiderWorkFlow/*"
-        rm -r "RiderWorkFlow"
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: "RiderWorkFlow.zip"
-        tag_name: "v${{steps.version.outputs.prop}}"        
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 7.x
+      - name: Get version
+        id: version
+        run: |
+          $version = (cat plugin.json | ConvertFrom-Json).Version
+          ac $env:GITHUB_OUTPUT "version=$version"
+      - name: Build
+        run: |
+          dotnet publish -c Release -o 
+          7z a RiderWorkFlow.zip ./publish/*
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: RiderWorkFlow.zip
+          tag_name: ${{ steps.version.outputs.version }}
