--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,8 +27,8 @@ jobs:
           ac $env:GITHUB_OUTPUT "version=$version"
       - name: Build
         run: |
-          dotnet publish -c Release -o "RiderWorkFlow"
-          7z a RiderWorkFlow.zip ./publish/*
+          dotnet publish -c Release
+          7z a RiderWorkFlow.zip
       - name: Create release
         uses: softprops/action-gh-release@v1
         with:
