--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,37 +1,41 @@
-name: Publish
+name: Publish Release
 
 on:
   push:
-    paths-ignore:
-      - README.md
-      - .gitignore
-    branches:
-      - main
+    branches: [ master ]
+    paths-ignore: 
+      - .github/workflows/*
+  workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  build:
+  publish:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 7.x
-      - name: Get version
+          dotnet-version: '7.0.x'
+          cache: true
+      - name: get version
         id: version
-        run: |
-          $version = (cat plugin.json | ConvertFrom-Json).Version
-          ac $env:GITHUB_OUTPUT "version=$version"
+        uses: notiz-dev/github-action-json-property@release
+        with: 
+          path: 'plugin.json'
+          prop_path: 'Version'
+      - run: echo ${{steps.version.outputs.prop}} 
       - name: Build
         run: |
-          dotnet publish 'RiderWorkFlow.csproj' -o "RiderWorkFlow"
-          7z a -tzip "RiderWorkFlow.zip" "RiderWorkFlow/*"
-          rm -r "RiderWorkFlow"
-      - name: Create release
+          dotnet publish 'RiderWorkFlow.csproj' -r win-x64  -c Release -o "RiderWorkFlow-${{steps.version.outputs.prop}}"
+          7z a -tzip "RiderWorkFlow-${{steps.version.outputs.prop}}.zip" "./RiderWorkFlow-${{steps.version.outputs.prop}}/*"
+          rm -r "RiderWorkFlow-${{steps.version.outputs.prop}}"
+      - name: Publish
         uses: softprops/action-gh-release@v1
         with:
-          files: RiderWorkFlow.zip
-          tag_name: ${{ steps.version.outputs.version }}
+          files: "RiderWorkFlow*"
+          tag_name: "v${{steps.version.outputs.prop}}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
